Fix syssylogo getting squashed.

--- a/src/components/RadioPlayer/RadioPlayer.scss
+++ b/src/components/RadioPlayer/RadioPlayer.scss
@@ -6,10 +6,14 @@
     margin-bottom: 42px;
 }
 
-.RadioPlayer__Brand {
+.RadioPlayer__BrandContainer {
     width: 75%;
     max-width: 300px;
     margin-bottom: 30px;
+}
+
+.RadioPlayer__Brand {
+    width: 100%;
 }
 
 .RadioPlayer__NowPlaying {
